@@ -2,6 +2,12 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 20 Aug 2015, PHP 7.0.0 RC 1
 
+- Code:
+  . Fixed bug #70215 (Segfault when __invoke is static). (Bob)
+
+- Phpdbg:
+  . Fixed bug #70214 (FASYNC not defined, needs sys/file.h include). (Bob)
+
 - Standard:
   . Fixed bug #70208 (Assert breaking access on objects). (Bob)
 
